--- a/css/style.css
+++ b/css/style.css
@@ -631,7 +631,7 @@ body{
 /* footer input */
 
 .footer-first-box {
-    background-image: url(./img/bg-first.png);
+    background-image: url(../img/bg-first.png);
     width: 100%;
     height: 662px;
 }
