--- a/css/reset.css
+++ b/css/reset.css
@@ -1,4 +1,4 @@
-h1,h2,h3,h4,p,a,button{
+h1,h2,h3,h4,p,a,button,ul,li{
     margin: 0;
     padding: 0;
     text-decoration: none;
@@ -6,6 +6,7 @@ h1,h2,h3,h4,p,a,button{
     color: white;
     border: none;
     font-weight: 400;
+    list-style: none;
 }
 img{
     padding: 0;
@@ -13,4 +14,7 @@ img{
 }
 button{
     background-color: transparent;
+}
+input{
+    border:none;
 }
