--- a/css/style.css
+++ b/css/style.css
@@ -598,6 +598,7 @@ section.footer-botom.container {
     border-radius: 6px;
     cursor: pointer;
 }
+
 /* mobile-first */
 
 @media (max-width: 1200px) {
@@ -612,11 +613,94 @@ section.footer-botom.container {
         color: #707070;
     }
 }
-@media (max-width: 820px) {
-    .menu-box {
-        gap: 20px;
+@media (max-width: 1000px) {
+    .menu {
+        gap: 10px;
     }
+    .menu-box {
+        gap: 10px;
+    }
+    .footer-nml {
+        flex-direction: column;
+        align-items: center;
+        gap: 50px 0;
+    }
+    .container {
+        padding: 0px 40px;
+    }
+    .first-line {
+        width: 300px;
+        height: 300px;
+    }
+    .second-line {
+        width: 190px;
+        height: 190px;
+    }
+    .sub-track__img{
+        width: 100px;
+    }
+    .h1-head {
+        font-size: 65px;
+    }
+}
+@media (max-width: 820px) {
     .team-first-box {
         gap: 5px;
+    }
+}
+@media (max-width: 700px) {
+    .menu-box {
+        display: none;
+    }
+    .header-container {
+        margin-top: 50px;
+        flex-wrap: wrap;
+        gap: 40px 0;
+        justify-content: center;
+    }
+    .cards-container {
+        flex-wrap: wrap;
+    }
+    .why-border-box {
+        flex-wrap: wrap;
+    }
+    .swiper-bg {
+        background: none;
+        height: 100%;
+    }
+    .swiper-padding-box {
+        padding: 20px;
+        left: 0;
+        margin: 0;
+        display: flex;
+    }
+    .speed-img{
+        max-width: 70px;
+    }
+    .speed__description{
+        font-size: 12px;
+    }
+    .speed__subtitle {
+        font-size: 25px;
+    }
+    .swiper-title__text {
+        font-size: 40px;
+    }
+    .swiper-next,.swiper-last {
+        display: none;
+    }
+    .team-first-box {
+        flex-wrap: wrap;
+        gap: 40px 0;
+    }
+    .footer-form {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .footer-link-container {
+        text-align: center;
+    }
+    .footer-inp-title {
+        text-align: center;
     }
 }
