--- a/css/reset.css
+++ b/css/reset.css
@@ -17,4 +17,8 @@ button{
 }
 input{
     border:none;
+    outline: none;
+    box-sizing: border-box;
+    font-size: 25px;
+    color: dimgray;
 }
