--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,21 @@ body{
     text-transform: uppercase;
     color: black;
 }
+.menu__link:hover{
+    color: #FFD84E;
+}
+.menu__link:active {
+    color: #373737;
+}
+.sign-up-button-big:hover{
+    background: none;
+    border: 2px solid #FFD703;
+    padding: 14px 70px;
+    color: #FFD703;
+}
+.sign-up-button-big:active{
+    color: #373737;
+}
 .sign-up-button-small {
     display: flex;
     padding: 12px 40px;
@@ -37,6 +52,18 @@ body{
     border-radius: 25px;
     color:#FFD703;
     font-size: 14px;
+}
+.sign-up-button-small:hover{
+    border: 2px solid #0ffc6a;
+}
+.footer-form__btn:hover{
+    background: none;
+}
+.footer-item-link:hover{
+    color:#FFD703;
+}
+.footer-item-link:active{
+    color:rgb(255, 125, 3);
 }
 .h1-head{
     font-size: 106px;
@@ -74,9 +101,14 @@ body {
 .logo {
     margin-top: 55px;
 }
-
-/* menu rechts */
-
+.burger-menu-btn {
+    font-size: 45px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-right: 35px;
+    margin-top: 10px;
+}
 .menu-container {
     align-items: baseline;
     display: flex;
@@ -92,7 +124,17 @@ body {
     gap: 35px;
     margin-top: 55px;
 }
-
+.menu-burger-active{
+    background-color: cadetblue;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 4;
+    width: 100%;
+    padding: 20px 0;
+}
 /* title-header + btn Lets-go */
 
 .header-container{
@@ -288,22 +330,22 @@ body {
     font-size: 12px;
     color: #707070;
 }
-.number1{
+.auto-layout{
     color: #FFD84E;
 }
-.number2{
+.variants{
     color: #FB6363;
 }
-.number3{
+.components{
     color: #A66DF5;
 }
-.number4{
+.atomic-design{
     color: #6DD6B0;
 }
-.number5{
+.animated{
     color: #708CF0;
 }
-.number6{
+.responsive{
     color: #A02E8E;
 }
 
@@ -347,6 +389,10 @@ body {
     background-color: #FFD703;
     font-size: 14px;
     color: black;
+}
+.swiper-signUp-btn:hover {
+    color: #373737;
+    background: none;
 }
 .swiper-signUp__btn {
     display: flex;
@@ -512,16 +558,16 @@ section.footer-botom.container {
 
 /* modal user login and pasword */
 
-.close-modal{
-    display: none;
-}
 .modal{
+    display: block;
+}
+.close-modal{
     display: none;
 }
 .modal-container {
     display: block;
     position: fixed;
-    z-index: 1;
+    z-index: 10;
     left: 0;
     top: 0;
     height: 100%;
@@ -535,23 +581,18 @@ section.footer-botom.container {
     height: 400px;
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
     background-color: cadetblue;
-    animation-name: modalopen;
-    animation-duration: var(--modal-duration);
+    border-radius: 30px;
 }
 .modal-close-img{
     width: 40px;
     position: relative;
     left: 600px;
+    cursor: pointer;
 }
 .modal-title {
     text-align: center;
-    font-family: Poppins;
     font-size: 40px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    letter-spacing: 0.25px;
-    color: var(--project-text-heading-light, #F4F4F4);
+    color: #F4F4F4;
 }
 .modal-input-first-box {
     display: flex;
@@ -565,7 +606,6 @@ section.footer-botom.container {
 .modal-input-login {
     width: 350px;
     height: 45px;
-    border: none;
     border-radius: 10px;
 }
 .modal-input-second-box-img{
@@ -584,7 +624,6 @@ section.footer-botom.container {
 .modal-input-pasword {
     width: 350px;
     height: 45px;
-    border: none;
     border-radius: 10px;
 }
 .modal-button-box {
@@ -602,7 +641,7 @@ section.footer-botom.container {
 
 @media (max-width: 1200px) {
     .menu-box {
-        gap: 40px;
+        gap: 20px;
     }
     .swiper-padding-box {
         left: 2.5%;
@@ -610,6 +649,9 @@ section.footer-botom.container {
     .team-title-description {
         max-width: 600px;
         color: #707070;
+    }
+    .container {
+        padding: 0 50px;
     }
 }
 @media (max-width: 1000px) {
@@ -642,9 +684,12 @@ section.footer-botom.container {
         font-size: 65px;
     }
 }
-@media (max-width: 820px) {
+@media (max-width: 870px) {
     .team-first-box {
         gap: 5px;
+    }
+    .menu__link {
+        font-size: 10px;
     }
 }
 @media (max-width: 700px) {
@@ -698,8 +743,29 @@ section.footer-botom.container {
     }
     .footer-link-container {
         text-align: center;
+        flex-wrap: wrap;
+        gap: 30px;
     }
     .footer-inp-title {
         text-align: center;
+    }
+    .modal-input-pasword {
+        width: 200px;
+    }
+    .modal-input-login {
+        width: 200px;
+    }
+    .modal-box {
+        width: 300px;
+        height: 300px;
+    }
+    .modal-close-img {
+        left: 250px;
+    }
+    .modal-button-box {
+        margin-top: 15px;
+    }
+    .logo {
+        margin-top: 10px;
     }
 }
