--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,21 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,800;1,900&display=swap');
 
+/*------colors--------*/
+
+:root {
+    --grey: #373737;
+    --yelow: #FFD703;
+    --white: #CEFFFD;
+  }
+
 /*---------BODY---------*/
 
 body{
     font-family: Poppins;
     font-size: 16px;
     color:#F4F4F4;
-    background-color: #CEFFFD;
+    background-color: var(--white);
 }
 
 /*---------container---------*/
@@ -24,7 +32,7 @@ body{
     gap: 12px;
     padding: 16px 72px;
     border-radius: 50px;
-    background:#FFD703;
+    background: var(--yelow);
     font-size: 22px;
     text-transform: uppercase;
     color: black;
@@ -33,24 +41,24 @@ body{
     color: #FFD84E;
 }
 .menu__link:active {
-    color: #373737;
+    color: var(--grey);
 }
 .sign-up-button-big:hover{
     background: none;
-    border: 2px solid #FFD703;
+    border: 2px solid var(--yelow);
     padding: 14px 70px;
-    color: #FFD703;
+    color: var(--yelow);
 }
 .sign-up-button-big:active{
-    color: #373737;
+    color: var(--grey);
 }
 .sign-up-button-small {
     display: flex;
     padding: 12px 40px;
-    border: 2px solid #FFD703;
+    border: 2px solid var(--yelow);
     align-items: center;
     border-radius: 25px;
-    color:#FFD703;
+    color: var(--yelow);
     font-size: 14px;
 }
 .sign-up-button-small:hover{
@@ -60,7 +68,7 @@ body{
     background: none;
 }
 .footer-item-link:hover{
-    color:#FFD703;
+    color: var(--yelow);
 }
 .footer-item-link:active{
     color:rgb(255, 125, 3);
@@ -134,6 +142,9 @@ body {
     z-index: 4;
     width: 100%;
     padding: 20px 0;
+    height: 100%;
+    justify-content: space-evenly;
+    max-height: 90%;
 }
 /* title-header + btn Lets-go */
 
@@ -147,7 +158,7 @@ body {
     max-width: 697px;
 }
 .description__text {
-    color: #CEFFFD;
+    color: var(--white);
     font-size: 24px;
     font-weight: 500;
 }
@@ -204,11 +215,13 @@ body {
 .cards-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
+    flex-wrap: wrap;
     gap: 32px;
 }
 .card {
-    max-width: 480px;
+    max-width: 400px;
+    min-width: 200px;
     display: flex;
     flex-direction: column;
     background: rgba(255, 255, 255, 0.50);
@@ -223,9 +236,10 @@ body {
 .card-title {
     font-size: 40px;
     letter-spacing: 0.25px;
+    color:var(--grey);
 }
 .card-description {
-    color:#CEFFFD;
+    color:var(--grey);
 }
 
 /* why */
@@ -234,7 +248,7 @@ body {
     margin-top: 240px;
 }
 .why-text {
-    color:#373737;
+    color:var(--grey);
 }
 .why-people {
     display: flex;
@@ -256,7 +270,7 @@ body {
     gap: 20px;
 }
 .why-name-text {
-    color:#373737;
+    color:var(--grey);
     font-size: 32px;
 }
 .why-name-description {
@@ -278,7 +292,7 @@ body {
     color:#707070;
 }
 .graphic-title{
-    color: #373737;
+    color: var(--grey);
 }
 .graphic-box{
     display: flex;
@@ -369,10 +383,10 @@ body {
     display: block;
 }
 .swiper-title__text {
-    color: #373737;
+    color: var(--grey);
 }
 .swiper-description__text {
-    color:#373737;
+    color: var(--grey);
 }
 .swiper-box {
     padding-top: 35px;
@@ -386,12 +400,12 @@ body {
     gap: 20px;
 }
 .swiper-signUp-btn{
-    background-color: #FFD703;
+    background-color: var(--yelow);
     font-size: 14px;
     color: black;
 }
 .swiper-signUp-btn:hover {
-    color: #373737;
+    color: var(--grey);
     background: none;
 }
 .swiper-signUp__btn {
@@ -407,7 +421,7 @@ body {
     background: #F9FCFF;
 }
 .swiper-scroll-btn-active{
-    background-color: #FFD703;
+    background-color: var(--yelow);
 }
 
 /* team */
@@ -428,7 +442,7 @@ body {
     max-width: 800px;
 }
 .team-title-text {
-    color:  #373737;
+    color:  var(--grey);
 }
 .team-title-description {
     color: #707070;;
@@ -450,7 +464,7 @@ body {
     border-radius: 30px;
 }
 .team-box-name-text {
-    color: #373737;
+    color: var(--grey);
     font-size: 24px;
     font-weight: 500;
 }
@@ -485,13 +499,13 @@ body {
     max-width: 610px;
 }
 .footer-form__input {
-    width: 360px;
+    width: 100%;
     height: 50px;
     border-radius: 25px;
     text-align: center;
 }
 .footer-form__btn {
-    background-color: #FFD703;
+    background-color: var(--yelow);
     color: black;
     text-transform: uppercase;
 }
@@ -530,7 +544,7 @@ body {
     width: 100%;
 }
 .footer-inp-descr {
-    color: #CEFFFD;
+    color: var(--white);
     letter-spacing: 0.1px;
 }
 .footer-inp-name {
@@ -539,7 +553,7 @@ body {
 }
 .footer-second-form__btn {
     background: none;
-    color: #FFD703;
+    color: var(--yelow);
 }
 .footer-item-active {
     padding-bottom: 16px;
@@ -574,9 +588,11 @@ section.footer-botom.container {
     width: 100%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .modal-box {
-    margin: 10% auto;
     width: 650px;
     height: 400px;
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
@@ -685,13 +701,15 @@ section.footer-botom.container {
     .h1-head {
         font-size: 65px;
     }
+    .team-first-box {
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
 }
 @media (max-width: 870px) {
-    .team-first-box {
-        gap: 5px;
-    }
     .menu__link {
-        font-size: 10px;
+        font-size: 13px;
     }
 }
 @media (max-width: 700px) {
@@ -754,15 +772,21 @@ section.footer-botom.container {
     .modal-input-pasword {
         width: 200px;
     }
+    .modal-form {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 500px;
+    }
     .modal-input-login {
         width: 200px;
     }
     .modal-box {
-        width: 300px;
-        height: 300px;
+        width: 350px;
+        height: 500px;
     }
     .modal-close-img {
-        left: 250px;
+        left: 300px;
     }
     .modal-button-box {
         margin-top: 15px;
@@ -772,5 +796,11 @@ section.footer-botom.container {
     }
     .burger-menu {
         display: flex;
+    }
+    .team-link.card {
+        margin-top: 275px;
+    }
+    .team-foto {
+        max-width: 100%;
     }
 }
